--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
             >Frontend Mentor</a
-          >. Coded by <a href="#">Your Name Here</a>.
+          >. Coded by <a href="#">venkatesh.b</a>.
         </p>
       </footer>
     </div>
