changes the responsive ness of the page

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
       <main class="main">
         <section class="section">
+          <!--  <div class="section__col-flex section__col-flex--1"> -->
           <div class="section__col col--1">
             <h2 class="section__col-heading">Supervisor</h2>
             <p class="section__col-text">
@@ -48,31 +49,33 @@
               class="section__col-img"
             />
           </div>
-          <div class="section__col-flex">
-            <div class="section__col col--2">
-              <h2 class="section__col-heading">Team Builder</h2>
-              <p class="section__col-text">
-                Scans our talent network to create the optimal team for your
-                project
-              </p>
-              <img
-                src="images/icon-team-builder.svg"
-                alt="house"
-                class="section__col-img"
-              />
-            </div>
-            <div class="section__col col--3">
-              <h2 class="section__col-heading">Karma</h2>
-              <p class="section__col-text">
-                Regularly evaluates our talent to ensure quality
-              </p>
-              <img
-                src="images/icon-karma.svg"
-                alt="light-bulb"
-                class="section__col-img"
-              />
-            </div>
+
+          <div class="section__col col--2">
+            <h2 class="section__col-heading">Team Builder</h2>
+            <p class="section__col-text">
+              Scans our talent network to create the optimal team for your
+              project
+            </p>
+            <img
+              src="images/icon-team-builder.svg"
+              alt="house"
+              class="section__col-img"
+            />
           </div>
+          <!--  </div> -->
+          <!--   <div class="section__col-flex section__col-flex--2"> -->
+          <div class="section__col col--3">
+            <h2 class="section__col-heading">Karma</h2>
+            <p class="section__col-text">
+              Regularly evaluates our talent to ensure quality
+            </p>
+            <img
+              src="images/icon-karma.svg"
+              alt="light-bulb"
+              class="section__col-img"
+            />
+          </div>
+
           <div class="section__col col--4">
             <h2 class="section__col-heading">Calculator</h2>
             <p class="section__col-text">
@@ -84,10 +87,11 @@
               class="section__col-img"
             />
           </div>
+          <!--  </div> -->
         </section>
       </main>
 
-      <footer>
+      <footer class="footer">
         <p class="attribution">
           Challenge by
           <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
